--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -1,17 +1,25 @@
 <h2 class="content-block">Profile</h2>
 
-<div class="content-block dx-card responsive-paddings">
-  <div class="form-avatar">
-    <img src="https://js.devexpress.com/Demos/WidgetsGallery/JSDemos/{{employee.Picture}}"/>
-  </div>
-  <span>{{employee.Notes}}</span>
-</div>
 
 <div class="content-block dx-card responsive-paddings">
-  <dx-form id="form"
-    [formData]="employee"
-    labelLocation="top"
-    [colCountByScreen]="colCountByScreen"
-  >
-  </dx-form>
+  <form [formGroup]="formGroup" class="form-group">
+    <label for="FirstName">First Name</label>
+    <dx-text-box
+      id="FirstName"
+      formControlName="FirstName"
+      [isValid]="formGroup.controls['FirstName'].valid"
+      [validationError]="formGroup.controls['FirstName'].errors"
+    ></dx-text-box>
+
+    <label for="Rating">Rating</label>
+    <dx-number-box
+      id="Rating"
+      formControlName="Rating"
+      [isValid]="formGroup.controls['Rating'].valid"
+      [validationError]="formGroup.controls['Rating'].errors"
+    ></dx-number-box>
+
+    <label for="Debug">IsValid:</label>
+    <p id="Debug">{{ formGroup.controls['Rating'].valid }} {{ formGroup.controls['Rating'].errors | json }}</p>
+  </form>
 </div>
